// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components EmptyActivity should renders correctly with a subtitle 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <Image
    source={2}
    style={
      Object {
        "marginBottom": 20,
      }
    }
  />
  <Component
    style={
      Object {
        "paddingHorizontal": 60,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      My title
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 13,
          "textAlign": "center",
        }
      }
    >
      My subtitle
    </Text>
  </Component>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  />
</Component>
`;

exports[`Components EmptyActivity should renders correctly with no subtitle 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <Image
    source={2}
    style={
      Object {
        "marginBottom": 20,
      }
    }
  />
  <Component
    style={
      Object {
        "paddingHorizontal": 60,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      My title
    </Text>
  </Component>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  />
</Component>
`;
